updated the login route

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       <div class="left">
         <div class="first">
           <img
-            src="/images/Time clock vector logo fast service stopwatch template.png"
+            src="/Frontend/login_signup_pages/images/Time clock vector logo fast service stopwatch template.png"
             alt=""
             class="logo"
           />
@@ -42,17 +42,6 @@
                 <b>Reports & Analysis.</b> Instantly create reports across
                 projects. Budgets, time, team capacity, cost breakdowns, and
                 more.
-              </p>
-            </div>
-            <div class="tick">
-              <img
-                src="https://19495563.fs1.hubspotusercontent-na1.net/hubfs/19495563/raw_assets/public/harvest-theme/images/icons/icon-checklist-black.svg"
-                alt=""
-                class="center"
-              />
-              <p>
-                <b>Invoicing & Payments.</b> Turn tracked time into invoices.
-                Accept online payments. Integrate with QuickBooks and Xero.
               </p>
             </div>
           </div>
