--- a/register.html
+++ b/register.html
@@ -44,17 +44,6 @@
                 more.
               </p>
             </div>
-            <div class="tick">
-              <img
-                src="https://19495563.fs1.hubspotusercontent-na1.net/hubfs/19495563/raw_assets/public/harvest-theme/images/icons/icon-checklist-black.svg"
-                alt=""
-                class="center"
-              />
-              <p>
-                <b>Invoicing & Payments.</b> Turn tracked time into invoices.
-                Accept online payments. Integrate with QuickBooks and Xero.
-              </p>
-            </div>
           </div>
         </div>
       </div>
@@ -62,7 +51,7 @@
         <h1 class="center">Sign Up to Time-Trace</h1>
         <div class="signupOpt">
           <div class="google center">
-            <a href="https://time-trace-backend.onrender.com/auth/google"
+            <a href="http://localhost:3300/auth/google"
               ><img
                 src="https://w7.pngwing.com/pngs/326/85/png-transparent-google-logo-google-text-trademark-logo-thumbnail.png"
                 alt=""
@@ -78,9 +67,7 @@
             >
           </div>
         </div>
-        <div class="or center">
-          <h3>------------------------- OR -------------------------</h3>
-        </div>
+        <div class="or center"></div>
         <div class="form">
           <div>
             <label for="firstName">First Name:</label>
