--- a/project.html
+++ b/project.html
@@ -284,11 +284,12 @@
         projectId: document.getElementById("task_project_id").value,
       };
       console.log(data);
-
+      const accessToken = localStorage.getItem("user.accessToken");
       fetch("https://time-trace-backend.onrender.com/task/create", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
+          Authorization: `Bearer ${accessToken}`,
         },
         body: JSON.stringify(data),
       })
@@ -324,16 +325,21 @@
     };
 
     window.onload = () => {
+      const accessToken = localStorage.getItem("user.accessToken");
       fetch("https://time-trace-backend.onrender.com/project/", {
         method: "GET",
         headers: {
           "Content-Type": "application/json",
+          Authorization: `Bearer ${accessToken}`,
         },
       })
         .then((res) => res.json())
         .then((res) => {
           console.log(res);
           displayProjectDetails(res.projects);
+        })
+        .catch((error) => {
+          console.error("Error fetching data:", error);
         });
     };
 
@@ -352,7 +358,7 @@
         descriptionCell.textContent = project.description;
 
         const createdByCell = document.createElement("td");
-        createdByCell.textContent = "ankita";
+        createdByCell.textContent = project.createdBy;
 
         const createdAtCell = document.createElement("td");
         createdAtCell.textContent = dayjs(project.createdAt).format(
